--- a/TP Traitement Image.ipynb
+++ b/TP Traitement Image.ipynb
@@ -83,9 +83,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.** Modifier une ligne dans le script précédent pour obtenir les composantes de couleur du pixel (14,234). **Réponse à donner sur Moodle.**\n",
+    "**3.** Modifier une ligne dans le script précédent pour obtenir les composantes de couleur du pixel (14,234) et exécuter à nouveau. **Réponse à donner sur Moodle.**\n",
     "\n",
-    "**4. a)** En-dessous des lignes de code précédentes, saisir les deux lignes ci-dessous."
+    "**4. a)** En-dessous des lignes de code précédentes, saisir les deux lignes ci-dessous et exécuter."
    ]
   },
   {
@@ -169,8 +169,8 @@
    "source": [
     "img=Image.open(\"Pomme.jpg\")\n",
     "largeur_image,hauteur_image=img.size\n",
-    "for y in range(100):\n",
-    "     for x in range(...):\n",
+    "for x in range(...):\n",
+    "     for y in range(...):\n",
     "        img.putpixel((x,y),(...,...,...))\n",
     "display(img)"
    ]
@@ -197,8 +197,8 @@
    "source": [
     "img=Image.open(\"Pomme.jpg\")\n",
     "largeur_image,hauteur_image=img.size\n",
-    "for y in range(hauteur_image):\n",
-    "    for x in range(largeur_image):\n",
+    "for x in range(largeur_image):\n",
+    "    for y in range(hauteur_image):\n",
     "        rouge,vert,bleu=img.getpixel((x,y))\n",
     "        nouveau_rouge=vert\n",
     "        nouveau_vert=bleu\n",
@@ -226,8 +226,8 @@
    "source": [
     "img=Image.open(\"Pomme.jpg\")\n",
     "largeur_image,hauteur_image=img.size\n",
-    "for y in range(hauteur_image):\n",
-    "    for x in range(largeur_image):\n",
+    "for x in range(largeur_image):\n",
+    "    for y in range(hauteur_image):\n",
     "       rouge,vert,bleu=img.getpixel((x,y))\n",
     "       valeur=.................................\n",
     "       nouveau_rouge=..........................\n",
@@ -254,8 +254,8 @@
    "source": [
     "img=Image.open(\"Pomme.jpg\")\n",
     "largeur_image,hauteur_image=img.size\n",
-    "for y in range(hauteur_image):\n",
-    "    for x in range(largeur_image):\n",
+    "for x in range(largeur_image):\n",
+    "    for y in range(hauteur_image):\n",
     "       rouge,vert,bleu=img.getpixel((x,y))\n",
     "       nouveau_rouge=............................\n",
     "       nouveau_vert=............................\n",
